<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#eee">

  <TextView
    android:id="@+id/hello_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Hello There!"
    android:visibility="invisible"/>

  <Button
    android:id="@+id/click_me_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="click me!"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>