<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <FrameLayout
    android:id="@+id/content_container"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="10dp"
    app:layout_constraintBottom_toTopOf="@+id/button_list"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <LinearLayout
    android:id="@+id/button_list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <Button
      android:id="@+id/show_text_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="show fragment"/>

    <Button
      android:id="@+id/show_text_when_button_clicked_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="show fragment"/>

    <Button
      android:id="@+id/with_no_attach_root_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="no attach root"/>

    <Button
      android:id="@+id/login_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="login"/>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>